<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.colorcoding.apps</groupId>
    <artifactId>ibas.businesspartner.parent</artifactId>
    <version>0.2.0</version>
    <packaging>pom</packaging>
    <name>ibas.businesspartner.parent</name>
    <url>https://colorcoding.org/ibas/businesspartner/</url>
    <organization>
        <name>Color-Coding Studio</name>
        <url>https://colorcoding.org</url>
    </organization>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.version>3.15.0</maven.compiler.version>
        <maven.jar.version>3.5.1</maven.jar.version>
        <maven.source.version>3.4.0</maven.source.version>
        <ibas.if.version>0.2.0</ibas.if.version>
        <junit.version>4.13.2</junit.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>21</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.version}</version>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.version}</version>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>ibas-maven</id>
            <name>ibas maven repository</name>
            <url>http://maven.colorcoding.org/repository/maven-public/</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.colorcoding.apps</groupId>
            <artifactId>ibas.initialfantasy</artifactId>
            <version>${ibas.if.version}</version>
        </dependency>
    </dependencies>
</project>
